Completed converting letters to svg

--- a/index.html
+++ b/index.html
@@ -88,19 +88,55 @@
             <a href="#" class="letter" id="p" data-state="close"
                 data-value="https://diabgarren.github.io/wdd230/chamber/">
                 <div class="letter-inner" data-state="close" data-value="https://diabgarren.github.io/wdd230/chamber/">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter P, Top Left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter P, Top Right" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter P, Bottom Left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter P, Bottom Right" />
+                    <svg class="top-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-left-inner" d="M86 0H0V107H12.1021V12H86V0Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="top-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-right-inner"
+                            d="M79.5 74.0001C79.5 3.5 14.5 6.10352e-05 6.00002 6.10352e-05H1.52588e-05V12H6.00002C13 12 65.5417 16.5003 66.5 74.0001C66.7282 87.6913 63.8145 98.491 59.1478 107H73.5256C77.2472 97.9969 79.5 87.1249 79.5 74.0001Z"
+                            fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-left-inner" d="M12 0H0V107H12V43H86V31H12V0Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-right-inner"
+                            d="M1.52588e-05 43H6.00001C12.9176 43 57.2565 39.3574 73.5256 0H59.1478C44.2151 27.2269 11.3332 31 6.00001 31H1.52588e-05V43Z"
+                            fill="#D9D9D9" />
+                    </svg>
                 </div>
             </a>
 
             <a href="#" class="letter" id="r" data-state="close" data-value="https://diabgarren.github.io/techtroll/">
                 <div class="letter-inner" data-state="close" data-value="https://diabgarren.github.io/techtroll/">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter R, Top Left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter R, Top Right" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter R, Bottom Left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter R, Bottom Right" />
+                    <svg class="top-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-left-inner" d="M86 0H0V107H11V19L73.6522 107H86V105.451L19 11H86V0Z"
+                            fill="#D9D9D9" />
+                    </svg>
+                    <svg class="top-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-right-inner" d="M3.05176e-05 107H1.09855L3.05176e-05 105.451V107Z"
+                            fill="#D9D9D9" />
+                        <path class="top-right-inner"
+                            d="M75 69C75 19.5 36.5 0 3.05176e-05 0V11C28.5 11 61.9364 26.7345 63 69C63.4006 84.9196 58.6049 97.5008 50.9476 107H65.3369C71.3916 96.7778 75 84.1542 75 69Z"
+                            fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-left-inner" d="M11 0V23H86V34H11V96H86V107H0V0H11Z" fill="#D9D9D9" />
+                        <path class="bot-left-inner" d="M86 17.3435L73.6522 0H86V17.3435Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-right-inner"
+                            d="M3.05176e-05 23V34H11.8587L56 96H0V107H77L23.0447 30.938C40.1847 26.25 55.7972 16.1057 65.3369 0H50.9476C41.9895 11.1128 29.1151 18.0076 16.0622 21.0946L1.09852 0H3.05176e-05V17.3436L4.02718 23H3.05176e-05Z"
+                            fill="#D9D9D9" />
+                    </svg>
                 </div>
             </a>
 
@@ -135,51 +171,136 @@
 
             <a href="#" class="letter" id="j" data-state="close" data-value="">
                 <div class="letter-inner" data-state="close" data-value="">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter J, Top Left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter J, Top Right" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter J, Bottom Left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter J, Bottom Right" />
+                    <svg class="top-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-left-inner" d="M86 10V0H64V10H86Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="top-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-right-inner" d="M84 0H0V10H72V107H84V0Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-left-inner"
+                            d="M1.00006 33H12.0001C12.0001 51.5 38 97.3302 85.0001 96C85.3347 95.9905 85.668 95.9793 86 95.9663V107C85.6679 107.003 85.3345 107 85 107C23.9999 107 1.00006 55.5 1.00006 33Z"
+                            fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-right-inner"
+                            d="M72 2.09808e-05L84 0V19C84 51.8275 63.2189 106.425 0 107V95.9663C52.2518 93.9201 72 48.3548 72 25.5V2.09808e-05Z"
+                            fill="#D9D9D9" />
+                    </svg>
                 </div>
             </a>
 
             <a href="#" class="letter" id="e" data-state="close" data-value="">
                 <div class="letter-inner" data-state="close" data-value="">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter E, Top Left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter E, Top Right" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter E, Bottom Left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter E, Bottom Right" />
+                    <svg class="top-left" g xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-left-inner" d="M86 0H0V107H86V98H11V11H86V0Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="top-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-right-inner" d="M64 0H0V11H64V0Z" fill="#D9D9D9" />
+                        <path class="top-right-inner" d="M45 98H0V107H45V98Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-left-inner" d="M86 107H0V0H86V2H11V96H86V107Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-right-inner" d="M64 107H0V96H64V107Z" fill="#D9D9D9" />
+                        <path class="bot-right-inner" d="M45 2H0V0H45V2Z" fill="#D9D9D9" />
+                    </svg>
                 </div>
             </a>
 
             <a href="#" class="letter" id="c" data-state="close" data-value="">
                 <div class="letter-inner" data-state="close" data-value="">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter C, Top Left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter C, Top Right" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter C, Bottom Left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter C, Bottom Right" />
+                    <svg class="top-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-left-inner"
+                            d="M86 10V0H75C75 0 47.9703 0 23.2583 25.5C1.52588e-05 49.5 0 77 0 77L0.00051529 107H11V79C11 79 12 54.0763 32 32.5C52 10.9237 80 10 80 10H86Z"
+                            fill="#D9D9D9" />
+                    </svg>
+                    <svg class="top-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-right-inner"
+                            d="M-2.28882e-05 10V0H11C11 0 38.0297 0 62.7417 25.5C79.9733 43.2811 84.4383 62.9834 85.5953 72H74.0511C72.3168 63.0658 67.4633 47.0245 54 32.5C34 10.9237 5.99998 10 5.99998 10H-2.28882e-05Z"
+                            fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-left-inner"
+                            d="M86 97V107H75C75 107 47.9703 107 23.2583 81.5C1.52588e-05 57.5 0 30 0 30L0.00051529 7.62939e-06H11V28C11 28 12 52.9237 32 74.5C52 96.0763 80 97 80 97H86Z"
+                            fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-right-inner"
+                            d="M-2.28882e-05 97V107H11C11 107 38.0297 107 62.7417 81.5C79.9733 63.7189 84.4383 44.0166 85.5953 35H74.0511C72.3168 43.9342 67.4633 59.9755 54 74.5C34 96.0763 5.99998 97 5.99998 97H-2.28882e-05Z"
+                            fill="#D9D9D9" />
+                    </svg>
                 </div>
             </a>
 
             <a href="#" class="letter" id="t" data-state="close" data-value="">
                 <div class="letter-inner" data-state="close" data-value="">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter T, Top Left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter T, Top Right" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter T, Bottom Left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter T, Bottom Right" />
+                    <svg class="top-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-left-inner" d="M86 0H0V11H81V107H86V0Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="top-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-right-inner" d="M86 0H0V107H4.99991V11H86V0Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-left-inner" d="M81 0H86V107H81V0Z" fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-right-inner" d="M5 0H0V107H5V0Z" fill="#D9D9D9" />
+                    </svg>
                 </div>
             </a>
 
             <a href="#" class="letter" id="s" data-state="close" data-value="">
                 <div class="letter-inner" data-state="close" data-value="">
-                    <img class="top-left" src="images/placeholder.webp" alt="Letter S, Top Left" />
-                    <img class="top-right" src="images/placeholder.webp" alt="Letter S, Top Right" />
-                    <img class="bot-left" src="images/placeholder.webp" alt="Letter S, Bottom Left" />
-                    <img class="bot-right" src="images/placeholder.webp" alt="Letter S, Bottom Right" />
+                    <svg class="top-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-left-inner"
+                            d="M16 68.0001C15 60.5001 15 54.0001 16 44.0001C19.1385 27.7573 26.121 21.9031 38 13C48.0971 5.43246 55.9272 3.3285 68 1.00007C74.7695 0.0329779 80.5 3.02661e-05 86 3.64138e-05V11.2557C81.6231 11.2956 77.0198 11.5437 72 12.0001C60.3931 14.2398 53.1878 15.6785 44 23C35.6918 29.6206 30.9658 34.963 28 45.0001C27 53.5001 27 60.5001 28 67.0001C31.6233 77.7301 43 85.4356 53.5 89.5001C69 95.5001 86 99.0001 86 99.0001V107H68.0986C58.4108 104.437 46.5149 100.624 37 95.5001C26 88.5001 19.4218 80.668 16 68.0001Z"
+                            fill="#D9D9D9" />
+                    </svg>
+                    <svg class="top-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="top-right-inner"
+                            d="M76 68.0001H65C65 68.0001 65.226 63.4203 65 60.5001C64.0712 48.5 58.4737 38.4104 48.5 28.5C38.1552 18.2209 29.9489 14.7259 15 12C10.1071 11.4564 5.21424 11.2083 0 11.2557V3.02661e-05C5.8886 0.0346104 11.5442 0.225324 18 1.00005C33.7121 4.36582 44.1265 8.41125 56 20C68.0011 31.7133 74.5714 42 76 58.0001C76.3571 62 76 68.0001 76 68.0001Z"
+                            fill="#D9D9D9" />
+                        <path class="top-right-inner" d="M0 99.0001V107H33.4133C17.1015 101.993 0 99.0001 0 99.0001Z"
+                            fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-left" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-left-inner"
+                            d="M19 35C19 35 18.8491 38.9661 19 41.5C19.9037 56.6798 24.6525 65.8568 35 77C46.0528 88.9028 56.1296 92.5399 72 96C76.8454 96.8076 81.4462 97.1261 86 97.1529V107C79.675 106.883 72.956 107.192 66 106C47.5214 101.325 35.6615 96.6769 23.5 82C13.2741 69.6592 9.10078 59.9891 7.99999 44C7.75859 40.4936 7.99999 35 7.99999 35H19Z"
+                            fill="#D9D9D9" />
+                        <path class="bot-left-inner" d="M86 4.00013C86 4.00013 78.2651 2.68913 68.0986 0H86V4.00013Z"
+                            fill="#D9D9D9" />
+                    </svg>
+                    <svg class="bot-right" xmlns="http://www.w3.org/2000/svg" width="86" height="107"
+                        viewBox="0 0 86 107" fill="none">
+                        <path class="bot-right-inner"
+                            d="M64 60C65 53 65 43 63 36C59.1661 25.936 48.6054 17.8123 39 14.5001C24.5 9.50013 0 4.00013 0 4.00013V0H33.4133C42.0482 2.65061 50.4618 5.8657 56 9.50013C67.538 18.0055 72.2908 23.1541 76 37C77 44.5 77.7253 54 76 61.5C72.9744 74.6522 68.0294 81.9699 58 91C47.6116 100.353 39.0699 102.644 25.5 106C18 107 9.5 107 0 107V97.1529C6.724 97.1925 13.3454 96.5963 20.5 96C33.2342 93.2602 41.6691 91.5886 51 82.5C58.2695 75.4193 61.4765 69.8293 64 60Z"
+                            fill="#D9D9D9" />
+                    </svg>
                 </div>
             </a>
 
-            <!-- <img id="desc" src="images/desc.webp" alt="Projects open in new tab" /> -->
-            <h2 id="desc">*pRojects opeN in New tAb</h2>
+            <h2 id="desc">*pRojects open in new tAb</h2>
         </div>
     </main>
     <footer>
