Added all images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div>
             <h1 data-end="_" id="terminal">garren-diab></h1>
             <button class="nav-btn">
-                <svg class="hamburger" viewBox="0 0 100 100" fill="#ed9012">
+                <svg class="hamburger" viewBox="0 0 100 100" fill="#ffffff">
                     <rect width="80" height="10" x="10" y="25" rx="5" class="line top"></rect>
                     <rect width="80" height="10" x="10" y="45" rx="5" class="line mid"></rect>
                     <rect width="80" height="10" x="10" y="65" rx="5" class="line bot"></rect>
@@ -29,13 +29,13 @@
                     <li><a href="#" class="active" id="home" data-value="Home">Home</a></li>
                     <li><a href="transcript/" id="transcript" data-value="Transcript">Transcript</a></li>
                     <li><a href="resume/" id="resume" data-value="Resume">Resume</a></li>
+                    <li><a href="certificates/" id="certificates" data-value="Certificates">Certificates</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
         <div id="container">
-            <!-- <img id="click" src="images/click.webp"> -->
             <h2 id="click">clicK<br>HeRe<br>---&#8594;</h2>
             <a href="#" class="letter" id="m" data-state="close"
                 data-value="https://maevehuman.github.io/MyUGPortfolio/">
