--- a/resume/index.html
+++ b/resume/index.html
@@ -18,7 +18,7 @@
         <div>
             <h1 data-end="_" id="terminal">garren-diab></h1>
             <button class="nav-btn">
-                <svg class="hamburger" viewBox="0 0 100 100" fill="#ed9012">
+                <svg class="hamburger" viewBox="0 0 100 100" fill="#ffffff">
                     <rect width="80" height="10" x="10" y="25" rx="5" class="line top"></rect>
                     <rect width="80" height="10" x="10" y="45" rx="5" class="line mid"></rect>
                     <rect width="80" height="10" x="10" y="65" rx="5" class="line bot"></rect>
@@ -29,14 +29,14 @@
                     <li><a href="../" id="home" data-value="Home">Home</a></li>
                     <li><a href="../transcript/" id="transcript" data-value="Transcript">Transcript</a></li>
                     <li><a href="#" class="active" id="resume" data-value="Resume">Resume</a></li>
+                    <li><a href="../certificates/" id="certificates" data-value="Certificates">Certificates</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
         <div>
-            <!-- <img src="resume.png" alt="Resume"> -->
-            <iframe src="resume.pdf" class="document"></iframe>
+            <img src="../images/GarrenDiab_Resume.jpg" alt="Resume" class="document">
         </div>
     </main>
     <footer>
